# sieve

./: CMakeLists.txt  INSTALL  INSTALL.txt  README  sieveConfig.h.in
cmake/modules/: IncludeAllTests.cmake
doc/: manual.docx
filters/: CMClike.sieve  Clean.sieve  Druglike.sieve  Leadlike.sieve
include/: calculator.h  counter.h  fingerprint.h  options.h  parseCommandLine.h  sieveConfig.h
include/filters/: filter.h  filterAbsorption.h  filterAdmetScore.h  filterAndrewsEnergy.h  filterAromaticOverTotalRingFraction.h  filterAromaticRingFraction.h  filterAromaticRings.h  filterAtoms.h  filterAtomsInCore.h  filterAtomsInLargestAromaticRing.h  filterAtomsInLargestBridge.h  filterAtomsInLargestNonaromaticRing.h  filterAtomsInLargestRing.h  filterAtomsInLargestRingsystem.h  filterAtomsInLargestSidechain.h  filterAtomsInSmallestAromaticRing.h  filterAtomsInSmallestBridge.h  filterAtomsInSmallestNonaromaticRing.h  filterAtomsInSmallestRing.h  filterAtomsInSmallestRingsystem.h  filterAtomsInSmallestSidechain.h  filterBonds.h  filterBridgeFraction.h  filterBridges.h  filterCarbons.h  filterChiralCenters.h  filterCoreFraction.h  filterCores.h  filterDistance.h  filterElements.h  filterElementsExcluded.h  filterElementsOnly.h  filterFlexibility.h  filterFormalCharges.h  filterFragment.h  filterHalideFraction.h  filterHalides.h  filterHbondAcceptors.h  filterHbondDonors.h  filterHeteroAtoms.h  (+31 more)
src/: calculator.cpp  counter.cpp  fingerprint.cpp  main.cpp  options.cpp  parseCommandLine.cpp  stripSalts.cpp
src/filters/: filter.cpp  filterAbsorption.cpp  filterAdmetScore.cpp  filterAndrewsEnergy.cpp  filterAromaticOverTotalRingFraction.cpp  filterAromaticRingFraction.cpp  filterAromaticRings.cpp  filterAtoms.cpp  filterAtomsInCore.cpp  filterAtomsInLargestAromaticRing.cpp  filterAtomsInLargestBridge.cpp  filterAtomsInLargestNonaromaticRing.cpp  filterAtomsInLargestRing.cpp  filterAtomsInLargestRingsystem.cpp  filterAtomsInLargestSidechain.cpp  filterAtomsInSmallestAromaticRing.cpp  filterAtomsInSmallestBridge.cpp  filterAtomsInSmallestNonaromaticRing.cpp  filterAtomsInSmallestRing.cpp  filterAtomsInSmallestRingsystem.cpp  filterAtomsInSmallestSidechain.cpp  filterBonds.cpp  filterBridgeFraction.cpp  filterBridges.cpp  filterCarbons.cpp  filterChiralCenters.cpp  filterCoreFraction.cpp  filterCores.cpp  filterDistance.cpp  filterElements.cpp  filterElementsExcluded.cpp  filterElementsOnly.cpp  filterFlexibility.cpp  filterFormalCharges.cpp  filterFragment.cpp  filterHalideFraction.cpp  filterHalides.cpp  filterHbondAcceptors.cpp  filterHbondDonors.cpp  filterHeteroAtoms.cpp  (+31 more)
